[metadata]
name = table2md
version = 0.0.1
author = Mikołaj Kuranowski
author_email = mkuranowski+pypackages@gmail.com
license = MIT
license_file = LICENSE
description = Print tabular data in markdown format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MKuranowski/table2md
project_urls =
    Bug Tracker = https://github.com/MKuranowski/table2md/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = table2md
python_requires = >=3.6
install_requires =
    typing_extensions; python_version < "3.8"

[flake8]
exclude =
    .venv
    .git
    __pycache__
max-line-length = 99
